# macro-touchpad

./: README.md
firmware/main-bd/esp32-s3/components/esp32-s3-hal/: CMakeLists.txt
firmware/main-bd/esp32-s3/components/esp32-s3-hal/common/hw/include/: i2c_exp.h
firmware/main-bd/esp32-s3/components/esp32-s3-hal/common/hw/include/touch/: gt911.h
firmware/main-bd/esp32-s3/components/esp32-s3-hal/hw/: hw.c  hw.h  hw_def.h
firmware/main-bd/esp32-s3/components/esp32-s3-hal/hw/driver/: audio.c  gpio.c  i2c.c  i2c_exp.c  lcd.c  lcdc.c  pwm.c  touch.c
firmware/main-bd/esp32-s3/components/esp32-s3-hal/hw/driver/lcd/: st7701.c
firmware/main-bd/esp32-s3/components/esp32-s3-hal/hw/driver/touch/: gt911.c
firmware/main-bd/esp32-s3/components/esp32-s3-hal/lib/: lv_conf.h
firmware/main-bd/esp32-s3/project/macro-touchpad/: macro-touchpad.code-workspace  (+1 more)
firmware/main-bd/project/macro-touchpad/: CMakeLists.txt
firmware/main-bd/stm32g031/cube/: .mxproject  STM32G031G8Ux_FLASH.ld  stm32g031g8.ioc
firmware/main-bd/stm32g031/stm32g031-fw/: CMakeLists.txt
hadware/V1.0/: BOM_MAIN-BD_PCB_2023-05-19.xlsx
hadware/V1.0/Gerber_PCB_2023-05-19/: Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomAssemblyLayer.GBA  Gerber_BottomLayer.GBL  Gerber_BottomPasteMaskLayer.GBP  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_DrillDrawingLayer.GDD  Gerber_Inner1.G1  Gerber_Inner2.G2  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
(+47 files in other folders)
